# cli-favorites

./: .gitignore  CLAUDE.md  README.md  code_analysis_rules.json  fav-add.bat  fav-del.bat  fav.bat  install-global-shortcuts.bat  install.bat  pyproject.toml  start.bat  update.bat
app/: constants.py  io_utils.py  logging_setup.py
app/cli/: _common.py  fav.py  fav_add.py  fav_del.py  install_global.py
app/config/: settings.py
app/favorites/: entry.py  filter.py  path_resolver.py  repository.py  usage.py
app/ui/: colors.py  interactive_menu.py  menu.py
tests/: test_colors.py  test_entry.py  test_fav_target_file.py  test_filter.py  test_interactive_menu.py  test_menu.py  test_path_resolver.py  test_repository.py  test_usage.py
tests/integration/: test_cli.py  test_install_global.py
tools/: run_integration_tests.bat  run_tests.bat
