[project]
name = "cli-favorites"
version = "0.1.0"
description = "Tiny CLI to navigate to favorite directories from a flat file."
requires-python = ">=3.11,<3.13"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
fav = "app.cli.fav:main"
fav-add = "app.cli.fav_add:main"
fav-del = "app.cli.fav_del:main"
fav-install-global = "app.cli.install_global:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = "colorama.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
